<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/drawing_name_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/enter_drawing_name"
        android:textSize="16sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/protection_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/add_protection" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:id="@+id/text_input_pass_prot"
        android:textSize="16sp"
        android:visibility="gone"
        android:inputType="textPassword"
        android:layout_marginHorizontal="16dp" />


</LinearLayout>
