<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/modify_name_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/modify_drawing_name"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/modify_password_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/modify_password"
        android:visibility="gone"
        android:textSize="16sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/visibility_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/modify_visibility" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/autoCompVisibilityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone" >

        <AutoCompleteTextView
            android:id="@+id/autoCompVisibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_visibility"
            android:inputType="none"
            android:visibility="gone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/autoCompAlbumsInput"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >
        <AutoCompleteTextView
            android:id="@+id/autoCompAlbums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_which_album"
            android:inputType="none"
            android:visibility="gone" />
    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>
