<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <!-- image viwer to view the images -->


    <ImageView
        android:id="@+id/imageViewMain"
        android:layout_width="453dp"
        android:layout_height="328dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/drawing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:text="@string/drawing_title"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/collaborators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:text="@string/collaborators"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/drawing_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:text="@string/drawing_owner"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/creation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:text="@string/creation_date"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#FF2ad11a"
            android:text="@string/edit" />

        <Button
            android:id="@+id/delete_drawing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFA4353"
            android:text="@string/delete" />

        <Button
            android:id="@+id/properties_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/properties" />
    </LinearLayout>

</LinearLayout>