<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/room_name_textview"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="40sp" />

        <Button
            android:id="@+id/join_room_button"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#adebad"
            android:textColor="@color/black"
            android:text="@string/join"
            android:textSize="30sp" />

        <Button
            android:id="@+id/quit_room_button"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#ff9999"
            android:textColor="@color/black"
            android:text="@string/leave"
            android:textSize="30sp" />

        <Button
            android:id="@+id/delete_room_button"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="#DC4747"
            android:textColor="@color/black"
            android:text="@string/delete"
            android:textSize="30sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
