<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_avatar"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/avatar5"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/profile_email"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/user_profile_nickname"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_avatar" />

        <TextView
            android:id="@+id/user_profile_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_nickname"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/user_profile_last_login_date"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_email" />

        <TextView
            android:id="@+id/user_profile_last_login_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_last_logged_in"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/user_profile_last_logout_date"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_nickname" />

        <TextView
            android:id="@+id/user_profile_last_logout_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_last_logged_out"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/friend_list_view"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_last_login_date" />

        <ListView
            android:id="@+id/friend_list_view"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:gravity="left"
            android:text="@string/empty_friend_list_placeholder"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>