<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="560dp"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/idTextViewAlbumTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/montserrat"
                android:paddingEnd="20dp"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="40sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/idImageViewAlbum"
            android:layout_width="776dp"
            android:layout_height="420dp"
            android:layout_gravity="center"
            android:src="@drawable/color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/open_album_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                android:backgroundTint="#FF2ad11a"
                android:text="@string/open" />

            <Button
                android:id="@+id/delete_album_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFA4353"
                android:text="@string/delete" />

            <Button
                android:id="@+id/leave_album_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/leave" />

            <Button
                android:id="@+id/album_preferences_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1.2"
                android:text="@string/properties" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>