<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    android:padding="100dp">

    <TextView
        android:id="@+id/language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/language"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/english_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/english_button" />

        <Button
            android:id="@+id/french_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/french_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/theme_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/theme"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/light_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/light_grey"
            android:text="LightGrey" />

        <Button
            android:id="@+id/dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/dark_grey"
            android:text="DarkGrey"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/deep_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/deep_purple"
            android:text="DeepPurple"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/light_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/light_blue"
            android:text="LightBlue" />

        <Button
            android:id="@+id/light_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/light_pink"
            android:text="LightPink" />
    </LinearLayout>
</LinearLayout>



